--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ textarea:focus, input:focus, a:focus, *:focus {
 	padding-left: 20px;*/
 	min-height: 362px;
 	background:url("../images/body-bg.png");
+
 	
 }
 
@@ -1160,7 +1161,8 @@ padding-left:300px;}
  	height:100px;
  	width:122px;
  	float:left;
- 	padding-right:20px;
+ 	box-shadow: 0px 0px 20px #000;
+ 	border-radius:5px;
  }
  #footer_slider a:hover  {
  	color: #000;
@@ -1207,6 +1209,7 @@ padding-left:300px;}
 /*.container{
 	margin-left:-20px;
 }*/
+
 @media (max-width: 767px){
 .row, .thumbnails {
 margin-left: -250px;
@@ -1216,13 +1219,13 @@ margin-left: -250px;
 	.row, .thumbnails {
 		margin-left: -350px;
 	}
-	/*.back{
-		width:260px;
-	}
-	.form input[placeholder] {
-		width:80px;
-	}*/
 }
+/*@media (max-width:700px){
+	.row, .thumbnails {
+		margin-left: -400px;
+	}
+
+}*/
 /*@media (max-width: 468px){
 	.row, .thumbnails {
 		margin-left: -410px;
@@ -1242,4 +1245,12 @@ margin-left: -250px;
 .footer-upper p{
 	line-height: 25px;
 }
+}
+
+.img_shadow{
+	padding-right:20px;
+	float: left;
+}
+.searchbox_style{
+	background-color:#000;
 }
