--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ input[type="text"], select, textarea {
 #footer ul {
 	list-style: none;
 	margin:0;
+	padding-left:10px;
 }
 
 #footer li {
@@ -1026,7 +1027,7 @@ src: url('font/penguin-bold.ttf')
 	padding-top:5px;
 }
 #footer .footer-wrapper{
-	width:926px;
+	width:955px;
 	height:auto;
 	margin:auto auto;
 }
@@ -1253,4 +1254,19 @@ margin-left: -250px;
 }
 .searchbox_style{
 	background-color:#000;
+}
+.footer_about,.footer_products,.footer_services,.footer_support,.footer_signin{
+	width:100%;height:200px; background-color:#58476B;margin-top:-95px;
+}
+.footer_products{
+	margin-top:-85px;
+}
+.footer_services{
+	margin-top:-82px;
+}
+.footer_support{
+	margin-top:-82px;
+}
+.footer_signin{
+	margin-top:-82px;
 }
