--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ textarea:focus, input:focus, a:focus, *:focus {
 	padding-left: 20px;*/
 	min-height: 362px;
 	background:url("../images/body-bg.png");
-
+	background-size:100%;
 	
 }
 
@@ -212,57 +212,57 @@ p.header {
 /* ==== Section Headers ==== */
 
 #services-top-desktop {
-	background: #fff url(../img/services_bg.jpg) fixed no-repeat center;
+	background: #fff url(../img/about_bg.jpg) fixed no-repeat center;
 	/*background-color:#57466A;*/
 	background-size: cover;
 }
 
 #services-top-mobile {
-	background: #fff url(../img/services_bg.jpg) no-repeat center;
+	background: #fff url(../img/about_bg.jpg) no-repeat center;
 	/*background-color:#57466A;*/
 }
 
 #works-top-desktop {
-	background: #fff url(../img/works_bg.jpg) fixed no-repeat center;
+	background: #fff url(../img/products_bg.jpg) fixed no-repeat center;
 	/*background-color:#57466A;*/
 	background-size: cover;
 }
 
 #works-top-mobile {
-	background: #fff url(../img/works_bg.jpg) no-repeat center;
+	background: #fff url(../img/products_bg.jpg) no-repeat center;
 	/*background-color:#57466A;*/
 }
 
 #gallery-top-desktop {
-	background: #fff url(../img/gallery_bg.jpg) fixed no-repeat center;
+	background: #fff url(../img/services_bg.jpg) fixed no-repeat center;
 	/*background-color:#57466A;*/
 	background-size: cover;
 }
 
 #gallery-top-mobile {
-	background: #fff url(../img/gallery_bg.jpg) no-repeat center;
+	background: #fff url(../img/services_bg.jpg) no-repeat center;
 /*	background-color:#57466A;*/
 }
 
 #team-top-desktop {
-	background: #fff url(../img/team_bg.jpg) fixed no-repeat center;
+	background: #fff url(../img/support_bg.jpg) fixed no-repeat center;
 	/*background-color:#57466A;*/
 	background-size: cover;
 }
 
 #team-top-mobile {
-	background: #fff url(../img/team_bg.jpg) no-repeat center;
+	background: #fff url(../img/support_bg.jpg) no-repeat center;
 	/*background-color:#57466A;*/
 }
 
 #contact-top-desktop {
-	background: #fff url(../img/contact_bg.jpg) fixed no-repeat center;
+	background: #fff url(../img/Login_bg.jpg) fixed no-repeat center;
 	/*background-color:#57466A;*/
 	background-size: cover;
 }
 
 #contact-top-mobile {
-	background: #fff url(../img/contact_bg.jpg) no-repeat center;
+	background: #fff url(../img/Login_bg.jpg) no-repeat center;
 	/*background-color:#57466A;*/
 }
 
@@ -480,6 +480,7 @@ input[type="text"], select, textarea {
 	color:#F24BD0;
 	height:15px;
 	background: #a0a0a0; /* Old browsers */
+	outline:none;
 background: -moz-linear-gradient(top,  #a0a0a0 0%, #cccccc 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a0a0a0), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
 background: -webkit-linear-gradient(top,  #a0a0a0 0%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
@@ -529,6 +530,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a0a0a0', end
 	text-transform: uppercase;
 	font-size: 10px;
 	height:15px;
+	outline:none;
 }
 
 @media (max-width: 979px) {
@@ -1079,6 +1081,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a0a0a0', end
 	width:950px;
 	height:auto;
 	margin:auto auto;
+	position:relative;
 }
 .footer-blog1{
 	padding-top:23px;
@@ -1262,12 +1265,18 @@ padding-left:300px;}
 	margin-left:-20px;
 }*/
 
+@media (max-width: 978px){
+.row, .thumbnails {
+margin-left: 50px;
+}
+}
 @media (max-width: 767px){
 .row, .thumbnails {
 margin-left: -250px;
 }
 }
-@media (max-width: 668px){
+
+@media (max-width: 660px){
 	.row, .thumbnails {
 		margin-left: -350px;
 	}
@@ -1318,6 +1327,30 @@ margin-left: -250px;
 	margin:auto;
 	padding-top:80px;
 }
-.webmaster{
-	margin-left:30px;
+.desinBy{
+	margin-top:75px;
+	font-size:10px;
 }
+.desinBy a{
+	font-size:10px;
+}
+.design{
+	font-size:12px;
+}
+/*changes*/
+.footer-upper a{
+	width:95px;
+	height:20px;
+	font-size:11px;
+	color:#000;
+}
+.footer-upper a:hover {
+	color:#000;
+}
+/* class: .btn-mfast-5,  color theme: mFast */
+.btn-mfast-5 { text-shadow: 0px 1px 0px #ffffff; color: #a2a2a2; background-color: #F2F2F2; background-image: -moz-linear-gradient(top, #ffffff, #d4d4d4); background-image: -ms-linear-gradient(top, #ffffff, #d4d4d4); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#d4d4d4)); background-image: -webkit-linear-gradient(top, #ffffff, #d4d4d4); background-image: -o-linear-gradient(top, #ffffff, #d4d4d4); background-image: linear-gradient(top, #ffffff, #d4d4d4); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#d4d4d4', GradientType=0); border-color: #F2F2F2 #d4d4d4 #d4d4d4 #F2F2F2; border-color: rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.35) rgba(0, 0, 0, 0.35) rgba(0, 0, 0, 0.25); }
+.btn-mfast-5:hover, .btn-mfast-5:active, .btn-mfast-5.active, .btn-mfast-5.disabled, .btn-mfast-5[disabled] { background-color: #d4d4d4; }
+.btn-mfast-5:hover { color: #8e8e8e; text-shadow: 0px 1px 0px #ffffff; }
+.btn-mfast-5:focus { color: #525252; -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); border-color: #F2F2F2 #d4d4d4 #d4d4d4 #F2F2F2; border-color: rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.35) rgba(0, 0, 0, 0.35) rgba(0, 0, 0, 0.25); }
+.btn-mfast-5.active, .btn-mfast-5:active { background-image: none; -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); color: #525252; }
+/* end .btn-mfast-5 */
